tests/conc/reject/reassign.hi
fn f(n: int) -> int:
    return n
fn main():
    t := spawn f(1)
    t = spawn f(2)
    print(str(wait(t)))
